Fix input broken styles

--- a/kylie/assets/base.css
+++ b/kylie/assets/base.css
@@ -48,7 +48,6 @@ p {
 }
 
 input {
-  all: unset;
   font-family: sans-serif;
 }
 
